[gd_scene load_steps=4 format=3 uid="uid://djwoc85mb6mfu"]

[ext_resource type="FontFile" uid="uid://b3hxrvl15g5kc" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://cnvhkoxkyq0lf" path="res://scripts/hud.gd" id="1_64ctp"]
[ext_resource type="PackedScene" uid="uid://qm1ea6fixo4x" path="res://scenes/entities/UI/spell_manager_panel.tscn" id="3_h0g4p"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="DamageLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 50.0
offset_right = -30.0
offset_bottom = 73.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 16
text = "0"

[node name="MessageLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.443
anchor_right = 0.5
anchor_bottom = 0.443
offset_left = -70.0
offset_top = -20.44
offset_right = 52.0
offset_bottom = -0.440033
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 16
text = "Click To Shoot"

[node name="ManaLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 20.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 73.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 16

[node name="DebugLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.183
anchor_right = 0.503
anchor_bottom = 0.183
offset_left = -153.76
offset_top = -129.64
offset_right = 153.24
offset_bottom = 130.36
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 2

[node name="ActiveModDebugLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 1141.0
offset_top = 93.0
offset_right = 1239.0
offset_bottom = 341.0

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpellManagerPanel" parent="." instance=ExtResource("3_h0g4p")]
texture_filter = 1
anchors_preset = -1
anchor_top = 0.37
anchor_bottom = 0.37
offset_top = 0.399994
offset_bottom = 0.399994

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
